# colony

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: __init__.py  api.py  auth.py  cli.py  models.py  payments.py  runtime.py
src/static/: index.html  mogra.html
src/static/css/: style.css
src/static/js/: app.js
src/templates/: agent.html  base.html  browse.html  chat.html  create.html  dashboard.html  home.html  mogra.html
tests/: test_api.py
