[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colony"
version = "0.1.0"
description = "The AI Agent Marketplace — discover, deploy, and monetize AI agents on Base"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "web3>=6.15.0",
    "pydantic>=2.5.0",
]

[project.scripts]
colony = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
